[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "Neo-task-cli"
version = "1.0.5"
authors = [
		{ name ="Arjun", email = "arjunjayakumar371@gmail.com" } 
		]		
description = "Task manager using cli(Command-Line-Interface)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
		"Programming Language :: Python :: 3",
		"Operating System :: OS Independent"
	]
#license=""

[project.scripts]
task-cli ="task_manager.cli:main"


[project.urls]
Homepage = "https://github.com/Neo110Matrix/task_cli"
Repository = "https://github.com/Neo110Matrix/task_cli"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]